[project]
name = "articlerevision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.1",
    "celery[redis]>=5.3",
    "fastapi>=0.137.0",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2",
    "pyjwt>=2.8",
    "python-multipart>=0.0.32",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]
